wxc/include/ewxw/wxc_glue.h

/* ELJCommand */
TClassDefExtend(ELJCommand,wxCommand)
TBool      ELJCommand_CanUndo( TSelf(ELJCommand) _obj );
TClass(ELJCommand) ELJCommand_Create( int _und, void* _nme, void* _obj, void* _clb );
void       ELJCommand_Delete( TSelf(ELJCommand) _obj );
TStringLen ELJCommand_GetName( TSelf(ELJCommand) _obj, TStringOutVoid _buf );
/* wxCommandLineParser */
TClassDef(wxCommandLineParser)

/* wxCommandProcessor */
TClassDefExtend(wxCommandProcessor,wxObject)
TBool      wxCommandProcessor_CanRedo( TSelf(wxCommandProcessor) _obj );
TBool      wxCommandProcessor_CanUndo( TSelf(wxCommandProcessor) _obj );
void       wxCommandProcessor_ClearCommands( TSelf(wxCommandProcessor) _obj );
void       wxCommandProcessor_Delete( TSelf(wxCommandProcessor) _obj );
int        wxCommandProcessor_GetCommands( TSelf(wxCommandProcessor) _obj, void* _ref );
void*      wxCommandProcessor_GetEditMenu( TSelf(wxCommandProcessor) _obj );
int        wxCommandProcessor_GetMaxCommands( TSelf(wxCommandProcessor) _obj );
void       wxCommandProcessor_Initialize( TSelf(wxCommandProcessor) _obj );
int        wxCommandProcessor_Redo( TSelf(wxCommandProcessor) _obj );
void       wxCommandProcessor_SetEditMenu( TSelf(wxCommandProcessor) _obj, TClass(wxMenu) menu );
void       wxCommandProcessor_SetMenuStrings( TSelf(wxCommandProcessor) _obj );
int        wxCommandProcessor_Submit( TSelf(wxCommandProcessor) _obj, TClass(wxCommand) command, int storeIt );
int        wxCommandProcessor_Undo( TSelf(wxCommandProcessor) _obj );
void*      wxCommandProcessor_wxCommandProcessor( int maxCommands );